@@ -1,6 +1,7 @@
 New in SVN
 ----------
 
+* Fix Issue 227 (missing background should not be fatal error)
 * Fix Issue 225 (bad spacing in lineblocks)
 * Fix Issue 223 (non-monospaced styles used in code)
 
